# covid19-miyazaki-scraping

./: LICENSE  data.json  pyproject.toml
.github/workflows/: scraping.yml
source/: Scraping.py
