[tool.poetry]
name = "covid19-miyazaki-scraping"
version = "0.1.0"
description = ""
authors = ["Tatsumi0000 <ti18027@student.miyazaki-u.ac.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
bs4 = "*"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
